infra/k8s/dev/engine-hermes-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engine-hermes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: engine-hermes
  template:
    metadata:
      labels:
        app: engine-hermes
    spec:
      containers:
        - name: engine-hermes
          securityContext:
            readOnlyRootFilesystem: false
