infra/k8s/dev/engine-jsc-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engine-jsc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: engine-jsc
  template:
    metadata:
      labels:
        app: engine-jsc
    spec:
      containers:
        - name: engine-jsc
          securityContext:
            readOnlyRootFilesystem: false
