infra/k8s/dev/engine-spidermonkey-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engine-spidermonkey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: engine-spidermonkey
  template:
    metadata:
      labels:
        app: engine-spidermonkey
    spec:
      containers:
        - name: engine-spidermonkey
          securityContext:
            readOnlyRootFilesystem: false
