infra/k8s/dev/engine-v8-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engine-v8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: engine-v8
  template:
    metadata:
      labels:
        app: engine-v8
    spec:
      containers:
        - name: engine-v8
          securityContext:
            readOnlyRootFilesystem: false
