infra/k8s/dev/trace-service-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trace-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trace-service
  template:
    metadata:
      labels:
        app: trace-service
    spec:
      containers:
        - name: trace-service
          securityContext:
            readOnlyRootFilesystem: false
